--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,19 @@
 certifi==2020.11.8
 chardet==3.0.4
+cycler==0.10.0
+future==0.18.2
 idna==2.10
+kiwisolver==1.3.1
+loguru==0.5.3
+matplotlib==3.3.3
+numpy==1.19.4
 paho-mqtt==1.5.1
+Pillow==8.0.1
+pyparsing==2.4.7
+python-dateutil==2.8.1
 requests==2.25.0
+scipy==1.5.4
+six==1.15.0
 time2relax==0.6.0
+uncertainties==3.1.5
 urllib3==1.26.2
